--- a/projects/web-design-legacy/_pgbackup/index_1738547832.html
+++ b/projects/web-design-legacy/_pgbackup/index_1738547832.html
@@ -46,8 +46,7 @@
         <script src="../../js/libraries/three.min.js"></script>
     </head>
     <body class="project-single">
-        <header>
-            <a class="logo" href="http://www.aetherthemes.com/demo/scenia"></a>
+        <header><a class="logo" href="http://www.aetherthemes.com/demo/scenia"></a>
             <div class="meta name">
                 <p><small>kate</small></p>
             </div>
@@ -55,34 +54,16 @@
         <section id="ajaxpage" class="ajaxpage">
             <div class="ajaxpage__slider">
                 <ul>
-                    <li>
-                        <a href="https://xd.adobe.com/view/0752958b-0bab-4821-b5b3-bceadb1a29f6-5201/?fullscreen" target="_blank"><img border="0" src="projects/web-design-travel/web-design-travel-1.jpg"/></a>
+                    <li><a href="web-design-legacy-ful.jpg" target="_blank"><img border="0" src="web-design-legacy-1.jpg"/></a>
                     </li>
-                    <li>
-                        <a href="https://xd.adobe.com/view/0752958b-0bab-4821-b5b3-bceadb1a29f6-5201/?fullscreen" target="_blank"><img border="0" src="projects/web-design-travel/web-design-travel-2.jpg"/></a>
-                    </li>
-                    <li>
-                        <a href="https://xd.adobe.com/view/0752958b-0bab-4821-b5b3-bceadb1a29f6-5201/?fullscreen" target="_blank"><img border="0" src="projects/web-design-travel/web-design-travel-3.jpg"/></a>
-                    </li>
-                    <li>
-                        <a href="https://xd.adobe.com/view/0752958b-0bab-4821-b5b3-bceadb1a29f6-5201/?fullscreen" target="_blank"><img border="0" src="projects/web-design-travel/web-design-travel-4.jpg"/></a>
-                    </li>
-                    <li>
-                        <a href="https://xd.adobe.com/view/0752958b-0bab-4821-b5b3-bceadb1a29f6-5201/?fullscreen" target="_blank"><img border="0" src="projects/web-design-travel/web-design-travel-5.jpg"/></a>
-                    </li>
-                    <li>
-                        <a href="https://xd.adobe.com/view/0752958b-0bab-4821-b5b3-bceadb1a29f6-5201/?fullscreen" target="_blank"><img border="0" src="projects/web-design-travel/web-design-travel-6.jpg"/></a>
-                    </li>
-                    <li>
-                        <a href="https://xd.adobe.com/view/0752958b-0bab-4821-b5b3-bceadb1a29f6-5201/?fullscreen" target="_blank"><img border="0" src="projects/web-design-travel/web-design-travel-7.jpg"/></a>
+                    <li><a href="web-design-legacy-ful.jpg" target="_blank"><img border="0" src="web-design-legacy-2.jpg"/></a>
                     </li>
                 </ul>
             </div>
             <div class="ajaxpage__content col-10 offset-1 col-md-8 offset-md-2 col-lg-10 offset-lg-1">
                 <ul class="ajaxpage__content--meta">
                     <li>
-                        <h4>Destinations Landing Page</h4>
-                        <small>Web Design</small>
+                        <h4>Real Estate Event Promotional Landing Page</h4><small>Web Design</small>
                     </li>
                     <li>
                         <p>UI/UX</p>
@@ -93,53 +74,66 @@
                 </ul>
                 <div class="ajaxpage__content--description">
                     <h3>Objective</h3>
-                    <p>To create an enticing and informative promotional advertisement for Malaysia, highlighting the diverse cultural and culinary experiences available in various cities, and encouraging potential travelers to explore these destinations.</p>
+                    <p>To create a visually compelling promotional advertisement for the "LEGACY" event in Boston, MA on June 18-19, emphasizing the transformative impact of the sessions and encouraging registrations before the price increase on April 15th.</p>
                     <h3>Color Scheme</h3>
                     <ul>
-                        <li><strong>Primary Colors:</strong> Light blue and white. The light blue color evokes a sense of tranquility and adventure, while the white background ensures a clean and elegant look.
+                        <li>
+                            <strong>Primary Colors:</strong> Gold and white. The gold color is associated with luxury, success, and achievement, while the white background ensures a clean and elegant look.
                         </li>
-                        <li><strong>Accent Colors:</strong> Subtle use of grey and other complementary colors to add visual interest without overpowering the primary color scheme.
+                        <li>
+                            <strong>Accent Colors:</strong> Subtle use of black and other complementary colors to add visual interest without overpowering the primary color scheme.
                         </li>
                     </ul>
                     <h3>Typography</h3>
                     <ul>
-                        <li><strong>Headings:</strong> Bold and large font size in light blue to make them stand out and grab attention. A sans-serif font like 'Helvetica Neue' ensures a modern and clean appearance.
+                        <li>
+                            <strong>Headings:</strong> Bold and large font size in gold to make them stand out and grab attention. A sans-serif font like 'Helvetica Neue' ensures a modern and clean appearance.
                         </li>
-                        <li><strong>Body Text:</strong> Smaller font size in grey for readability and to maintain a professional look. Consistent use of sans-serif fonts ensures uniformity and clarity.
+                        <li>
+                            <strong>Body Text:</strong> Smaller font size in black for readability and to maintain a professional look. Consistent use of sans-serif fonts ensures uniformity and clarity.
                         </li>
                     </ul>
                     <h3>Layout</h3>
                     <ul>
-                        <li><strong>Consistent Structure:</strong> The advertisement follows a consistent structure to maintain brand cohesion. Clear sections with headings, body text, and images ensure easy navigation.
+                        <li>
+                            <strong>Consistent Structure:</strong> The advertisement follows a consistent structure to maintain brand cohesion. Clear sections with headings, body text, and images ensure easy navigation.
                         </li>
-                        <li><strong>White Space:</strong> Ample use of white space to prevent clutter and enhance readability. This also helps in creating a clean and sophisticated look.
+                        <li>
+                            <strong>White Space:</strong> Ample use of white space to prevent clutter and enhance readability. This also helps in creating a clean and sophisticated look.
                         </li>
-                        <li><strong>Alignment:</strong> Center alignment for titles and key images to maintain balance and harmony. Left alignment for body text to ensure readability.
+                        <li>
+                            <strong>Alignment:</strong> Center alignment for titles and key images to maintain balance and harmony. Left alignment for body text to ensure readability.
                         </li>
                     </ul>
                     <h3>Imagery</h3>
                     <ul>
-                        <li><strong>High-Quality Images:</strong> Use of high-quality images of iconic Malaysian locations, such as Kuala Lumpur's skyline, Melaka, Penang, and Langkawi, to visually represent the tour highlights. Images are carefully selected to convey the beauty and cultural richness of Malaysia.
+                        <li>
+                            <strong>High-Quality Images:</strong> Use of high-quality images of speakers, stages, and audiences to visually represent the event's theme. Images are carefully selected to convey the excitement and transformative nature of the sessions.
                         </li>
-                        <li><strong>Consistent Style:</strong> Images follow a consistent style and color tone to maintain uniformity across the promotional materials.
+                        <li>
+                            <strong>Consistent Style:</strong> Images follow a consistent style and color tone to maintain uniformity across the promotional materials.
                         </li>
                     </ul>
                     <h3>Visual Hierarchy</h3>
                     <ul>
-                        <li><strong>Font Sizes and Colors:</strong> Use of different font sizes and colors to establish a clear visual hierarchy. Important information like headings and key points are highlighted using larger font sizes and bold colors.
+                        <li>
+                            <strong>Font Sizes and Colors:</strong> Use of different font sizes and colors to establish a clear visual hierarchy. Important information like headings and key points are highlighted using larger font sizes and bold colors.
                         </li>
-                        <li><strong>Bullet Points:</strong> Use of bullet points to list city highlights and details for easy readability and quick reference.
+                        <li>
+                            <strong>Bullet Points:</strong> Use of bullet points to list session details and speaker information for easy readability and quick reference.
                         </li>
                     </ul>
                     <h3>Branding</h3>
                     <ul>
-                        <li><strong>Logo Placement:</strong> Prominent placement of the tour company logo to reinforce brand identity and recognition.
+                        <li>
+                            <strong>Logo Placement:</strong> Prominent placement of the event logo to reinforce brand identity and recognition.
                         </li>
-                        <li><strong>Taglines and Slogans:</strong> Inclusion of taglines and slogans to communicate the brand message effectively and engage the audience.
+                        <li>
+                            <strong>Taglines and Slogans:</strong> Inclusion of taglines and slogans to communicate the event message effectively and engage the audience.
                         </li>
                     </ul>
                     <h3>Outcome</h3>
-                    <p>The art direction successfully creates an enticing and informative promotional advertisement that reflects the excitement and cultural richness of traveling in Malaysia. The clean and modern design, combined with carefully selected typography, colors, and imagery, ensures that the advertisement is not only informative but also visually engaging. This encourages potential travelers to engage with the content and consider exploring the cultural and culinary experiences that Malaysia has to offer.</p>
+                    <p>The art direction successfully creates a visually appealing and impactful promotional advertisement that reflects the excitement and transformative nature of the "LEGACY" event. The clean and elegant design, combined with carefully selected typography, colors, and imagery, ensures that the advertisement is not only informative but also visually engaging. This encourages potential participants to register for the event and discover how it can empower their relationships and transform their lives.</p>
                 </div>
             </div>
         </section>
