--- a/projects/web-design-legacy/index.html
+++ b/projects/web-design-legacy/index.html
@@ -54,9 +54,9 @@
         <section id="ajaxpage" class="ajaxpage">
             <div class="ajaxpage__slider">
                 <ul>
-                    <li><a href="web-design-legacy-ful.jpg" target="_blank"><img border="0" src="web-design-legacy-1.jpg"/></a>
+                    <li><a href="projects/web-design-legacy/web-design-legacy-ful.jpg" target="_blank"><img border="0" src="projects/web-design-legacy/web-design-legacy-1.jpg"/></a>
                     </li>
-                    <li><a href="web-design-legacy-ful.jpg" target="_blank"><img border="0" src="web-design-legacy-2.jpg"/></a>
+                    <li><a href="projects/web-design-legacy/web-design-legacy-ful.jpg" target="_blank"><img border="0" src="projects/web-design-legacy/web-design-legacy-2.jpg"/></a>
                     </li>
                 </ul>
             </div>
