--- a/index.html
+++ b/index.html
@@ -641,29 +641,33 @@
                                         </div>
                                     </div> <img src="projects/web-design-japan/web-design-japan-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show sports"><a href="#!projects/sports-international" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show web-design">
+                                <a href="#!projects/web-design-legacy" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>International<br/><span>sports</span></p>
+                                            <p>Real Estate Event<br/><span>web design</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/FXnzDl0.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/web-design-legacy/web-design-legacy-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show sports"><a href="#!projects/sports-matches" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show web-design">
+                                <a href="#!projects/web-design-live" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Matches<br/><span>sports</span></p>
+                                            <p>Real Estate Event<br/><span>web design</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/A0eWUac.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/web-design-live/web-design-live-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show sports"><a href="#!projects/sports-swansea-sponsor" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show web-design">
+                                <a href="#!projects/web-design-synergy" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Swansea<br/><span>sports</span></p>
+                                            <p>Real Estate<br/><span>web design</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/z7B8Jki.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/web-design-synergy/web-design-synergy-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show storyboard"><a href="#!projects/storyboard-partner-website" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show web-design">
+                                <a href="#!projects/web-design-travel" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Motion Infographics<br/><span>storyboard</span></p>
+                                            <p>Destinations<br/><span>web design</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/sFJ9kY9.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/web-design-travel/web-design-travel-0.jpg" alt="thumbnail"/> </a>
                             </div>
                             <div class="col-12 col-md-4 project show videos"><a href="#!projects/videos-peugeot1" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
