--- a/_pgbackup/index_1738548396.html
+++ b/_pgbackup/index_1738548396.html
@@ -613,53 +613,61 @@
                                         </div>
                                     </div> <img src="projects/videos-peugeot/videos-peugeot.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show sports"><a href="#!projects/sports-basketball" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show web web-design">
+                                <a href="#!projects/web-design-freedom" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Basketball<br/><span>sports</span></p>
+                                            <p>Real Estate<br/><span>web design</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/qx4p9VF.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/web-design-freedom/web-design-freedom-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show sports"><a href="#!projects/sports-domestic" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show web-design">
+                                <a href="#!projects/web-design-hurricane" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Domestic<br/><span>sports</span></p>
+                                            <p>Real Estate Lending<br/><span>web design</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/yirrNf5.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/web-design-hurricane/web-design-hurricane-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show sports"><a href="#!projects/sports-e-sports" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show web-design">
+                                <a href="#!projects/web-design-iwom" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>e-Sports<br/><span>sports</span></p>
+                                            <p>Retail<br/><span>web design</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/OvvgbZj.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/web-design-iwom/web-design-iwom-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show sports"><a href="#!projects/sports-intermilan-sponsor" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show web-design">
+                                <a href="#!projects/web-design-japan" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Inter<br/><span>sports</span></p>
+                                            <p>Travel Tour<br/><span>web design</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/9RROMcK.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/web-design-japan/web-design-japan-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show sports"><a href="#!projects/sports-international" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show web-design">
+                                <a href="#!projects/web-design-legacy" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>International<br/><span>sports</span></p>
+                                            <p>Real Estate Event<br/><span>web design</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/FXnzDl0.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/web-design-legacy/web-design-legacy-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show sports"><a href="#!projects/sports-matches" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show web-design">
+                                <a href="#!projects/web-design-live" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Matches<br/><span>sports</span></p>
+                                            <p>Real Estate Event<br/><span>web design</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/A0eWUac.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/web-design-live/web-design-live-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show sports"><a href="#!projects/sports-swansea-sponsor" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show web-design">
+                                <a href="#!projects/web-design-synergy" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Swansea<br/><span>sports</span></p>
+                                            <p>Real Estate<br/><span>web design</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/z7B8Jki.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/web-design-synergy/web-design-synergy-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show storyboard"><a href="#!projects/storyboard-partner-website" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show web-design">
+                                <a href="#!projects/web-design-travel" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Motion Infographics<br/><span>storyboard</span></p>
+                                            <p>Destinations<br/><span>web design</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/sFJ9kY9.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/web-design-travel/web-design-travel-0.jpg" alt="thumbnail"/> </a>
                             </div>
                             <div class="col-12 col-md-4 project show videos"><a href="#!projects/videos-peugeot1" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
