--- a/projects/infographics-perks/index.html
+++ b/projects/infographics-perks/index.html
@@ -51,11 +51,13 @@
                 <p><small>kate</small></p>
             </div>
         </header>
-        <section id="ajaxpage" class="ajaxpage"><a href="infographics-perks-0.jpg" target="_blank"><img border="0" src="infographics-perks.jpg"/></a>
+        <section id="ajaxpage" class="ajaxpage">
+            <a href="projects/infographics-perks/infographics-perks-0.jpg" target="_blank"><img border="0" src="projects/infographics-perks/infographics-perks.jpg"/></a>
             <div class="ajaxpage__content col-10 offset-1 col-md-8 offset-md-2 col-lg-10 offset-lg-1">
                 <ul class="ajaxpage__content--meta">
                     <li>
-                        <h4>Perk Me Up Campaign</h4><small>Infographics</small>
+                        <h4>Perk Me Up Campaign</h4>
+                        <small>Infographics</small>
                     </li>
                     <li>
                         <p>Key Visual</p>
@@ -69,20 +71,15 @@
                     <p><strong>Objective:</strong> Design a vibrant and engaging advertisement for the "Perk Me Up" campaign at Takashimaya Singapore, encouraging customer participation.</p>
                     <p><strong>Process & Tactics:</strong></p>
                     <ul>
-                        <li>
-                            <strong>Understanding the Campaign:</strong> Gained insights into the campaign's goals and target audience to incorporate them into the ad design.
+                        <li><strong>Understanding the Campaign:</strong> Gained insights into the campaign's goals and target audience to incorporate them into the ad design.
                         </li>
-                        <li>
-                            <strong>Conceptualization:</strong> Brainstormed and sketched initial design concepts featuring energetic and cheerful elements.
+                        <li><strong>Conceptualization:</strong> Brainstormed and sketched initial design concepts featuring energetic and cheerful elements.
                         </li>
-                        <li>
-                            <strong>Design Execution:</strong> Created a vibrant advertisement with a pink background and sparkles. The central speech bubble is yellow with a purple border, containing the text "WHAT PERKS YOU UP?" in bold, pink letters. Below this, there is a smaller blue speech bubble with the text "WE ASKED & YOU ANSWER!" in white letters. In the top right corner, there is a "PERK ME UP" logo with the dates "FRI 28 APR TO WED 24 MAY 2023" below it. The bottom right corner features the Takashimaya Singapore logo with the tagline "Together dreams come true." The colors and overall design were set following the parameters of the brand guidelines.
+                        <li><strong>Design Execution:</strong> Created a vibrant advertisement with a pink background and sparkles. The central speech bubble is yellow with a purple border, containing the text "WHAT PERKS YOU UP?" in bold, pink letters. Below this, there is a smaller blue speech bubble with the text "WE ASKED & YOU ANSWER!" in white letters. In the top right corner, there is a "PERK ME UP" logo with the dates "FRI 28 APR TO WED 24 MAY 2023" below it. The bottom right corner features the Takashimaya Singapore logo with the tagline "Together dreams come true." The colors and overall design were set following the parameters of the brand guidelines.
                         </li>
-                        <li>
-                            <strong>Feedback & Refinement:</strong> Refined the ad to ensure it met the campaign goals and brand guidelines.
+                        <li><strong>Feedback & Refinement:</strong> Refined the ad to ensure it met the campaign goals and brand guidelines.
                         </li>
-                        <li>
-                            <strong>Final Delivery:</strong> Ensured the advertisement was of high quality and ready for both digital and print distribution.
+                        <li><strong>Final Delivery:</strong> Ensured the advertisement was of high quality and ready for both digital and print distribution.
                         </li>
                     </ul>
                     <p><strong>Outcome:</strong> <em>Engaging Campaign:</em> The advertisement successfully encouraged customer participation and engagement, contributing to the overall success of the "Perk Me Up" campaign.</p>
