--- a/projects/infographics-perks/_pgbackup/index_1738548836.html
+++ b/projects/infographics-perks/_pgbackup/index_1738548836.html
@@ -51,15 +51,14 @@
                 <p><small>kate</small></p>
             </div>
         </header>
-        <section id="ajaxpage" class="ajaxpage">
-            <a href="projects/print-sea/print-seaprint-sea-full.jpg" target="_blank"><img border="0" src="projects/print-sea/print-seaprint-sea.jpg"/></a>
+        <section id="ajaxpage" class="ajaxpage"><a href="infographics-perks-0.jpg" target="_blank"><img border="0" src="infographics-perks.jpg"/></a>
             <div class="ajaxpage__content col-10 offset-1 col-md-8 offset-md-2 col-lg-10 offset-lg-1">
                 <ul class="ajaxpage__content--meta">
                     <li>
-                        <h4>Resorts World Cruises Promotional Flyer</h4><small>Print</small>
+                        <h4>Perk Me Up Campaign</h4><small>Infographics</small>
                     </li>
                     <li>
-                        <p>Flyer</p>
+                        <p>Key Visual</p>
                         <p></p>
                     </li>
                     <li>
@@ -67,14 +66,26 @@
                     </li>
                 </ul>
                 <div class="ajaxpage__content--description">
-                    <h3>Art Direction:</h3>
-                    <p><strong>Objective:</strong> The goal is to create a visually appealing and engaging flyer that captures the essence of a luxurious cruise experience and highlights the exclusive offers and packages available.</p>
-                    <p><strong>Color Scheme:</strong> The primary colors used are white, grey, and pink. The pink color for headings and accents adds vibrancy and draws attention to key elements, while the white and grey background maintains a clean and sophisticated look. These colors are tactically chosen to evoke feelings of relaxation, enjoyment, and exclusivity.</p>
-                    <p><strong>Typography:</strong> The typography is chosen for clarity and readability. Headings are in a larger, bold pink font to stand out, while the body text is in a smaller, softer shade of grey. This combination ensures that the information is easily digestible and visually appealing, strategically guiding the viewer's attention to important details.</p>
-                    <p><strong>Imagery:</strong> High-quality images of the cruise ship and scenic destinations are used to visually entice potential travelers. The images are centered and bordered with a subtle drop shadow to make them stand out without overwhelming the text. The selection of imagery is deliberate to convey the luxurious and picturesque experience of the cruise.</p>
-                    <p><strong>Layout:</strong> The layout is designed to be organized and structured, with clear sections for different types of information. Ample white space is used to prevent clutter and enhance readability. Center alignment of the title and image container helps maintain a balanced and harmonious look. The layout is tactically planned to ensure a seamless flow of information.</p>
-                    <p><strong>Visual Hierarchy:</strong> A clear visual hierarchy is established through the use of font sizes, colors, and spacing. This ensures that the reader's attention is drawn to the most important elements first, such as the cruise packages, special offers, and key descriptions. Strategic use of bold text for headings further guides the reader through the content in a logical and engaging manner, making it easy for them to identify and focus on the main selling points.</p>
-                    <p><strong>Outcome:</strong> The art direction successfully creates an inviting and sophisticated presentation that mirrors the luxurious experience of a Resorts World cruise. The clean and modern design, combined with carefully selected typography, colors, and imagery, makes the flyer not only informative but also visually appealing. The tactical approach ensures that the key messages are effectively communicated, encouraging potential customers to explore the cruise packages and consider booking their next vacation with Resorts World Cruises.</p>
+                    <p><strong>Objective:</strong> Design a vibrant and engaging advertisement for the "Perk Me Up" campaign at Takashimaya Singapore, encouraging customer participation.</p>
+                    <p><strong>Process & Tactics:</strong></p>
+                    <ul>
+                        <li>
+                            <strong>Understanding the Campaign:</strong> Gained insights into the campaign's goals and target audience to incorporate them into the ad design.
+                        </li>
+                        <li>
+                            <strong>Conceptualization:</strong> Brainstormed and sketched initial design concepts featuring energetic and cheerful elements.
+                        </li>
+                        <li>
+                            <strong>Design Execution:</strong> Created a vibrant advertisement with a pink background and sparkles. The central speech bubble is yellow with a purple border, containing the text "WHAT PERKS YOU UP?" in bold, pink letters. Below this, there is a smaller blue speech bubble with the text "WE ASKED & YOU ANSWER!" in white letters. In the top right corner, there is a "PERK ME UP" logo with the dates "FRI 28 APR TO WED 24 MAY 2023" below it. The bottom right corner features the Takashimaya Singapore logo with the tagline "Together dreams come true." The colors and overall design were set following the parameters of the brand guidelines.
+                        </li>
+                        <li>
+                            <strong>Feedback & Refinement:</strong> Refined the ad to ensure it met the campaign goals and brand guidelines.
+                        </li>
+                        <li>
+                            <strong>Final Delivery:</strong> Ensured the advertisement was of high quality and ready for both digital and print distribution.
+                        </li>
+                    </ul>
+                    <p><strong>Outcome:</strong> <em>Engaging Campaign:</em> The advertisement successfully encouraged customer participation and engagement, contributing to the overall success of the "Perk Me Up" campaign.</p>
                 </div>
             </div>
         </section>
