--- a/projects/print-sea/_pgbackup/index_1738549267.html
+++ b/projects/print-sea/_pgbackup/index_1738549267.html
@@ -51,12 +51,12 @@
                 <p><small>kate</small></p>
             </div>
         </header>
-        <section id="ajaxpage" class="ajaxpage">
-            <a href="projects/print-sea/print-seaprint-sea-full.jpg" target="_blank"><img border="0" src="projects/print-sea/print-seaprint-sea.jpg"/></a>
+        <section id="ajaxpage" class="ajaxpage"><a href="print-seaprint-sea-full.jpg" target="_blank"><img border="0" src="print-seaprint-sea.jpg"/></a>
             <div class="ajaxpage__content col-10 offset-1 col-md-8 offset-md-2 col-lg-10 offset-lg-1">
                 <ul class="ajaxpage__content--meta">
                     <li>
-                        <h4>Resorts World Cruises Promotional Flyer</h4><small>Print</small>
+                        <h4>Resorts World Cruises Promotional Flyer</h4>
+                        <small>Print</small>
                     </li>
                     <li>
                         <p>Flyer</p>
